--- a/example/src/main/res/layout/activity_main.xml
+++ b/example/src/main/res/layout/activity_main.xml
@@ -35,4 +35,10 @@
         android:layout_height="wrap_content"
         android:text="刷新+点击事件"/>
 
+    <Button
+        android:id="@+id/button_perfect"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="优化"/>
+
 </LinearLayout>
