--- a/udlrslidelistview/src/main/res/layout/layout_udlr_slide_row.xml
+++ b/udlrslidelistview/src/main/res/layout/layout_udlr_slide_row.xml
@@ -12,7 +12,7 @@
 
     <LinearLayout
         android:id="@+id/udlr_row_slide_layout"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"/>
 
