--- a/example/src/main/res/layout/activity_main.xml
+++ b/example/src/main/res/layout/activity_main.xml
@@ -2,43 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="8dp">
+    android:layout_height="match_parent">
 
     <Button
-        android:id="@+id/button_weight"
+        android:id="@+id/button_history_version"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="标准体重对照表"/>
+        android:text="老版本入口"/>
 
     <Button
-        android:id="@+id/button_score"
+        android:id="@+id/button_new_version"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="成绩列表"/>
-
-    <Button
-        android:id="@+id/button_row_divider"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="区分行颜色"/>
-
-    <Button
-        android:id="@+id/button_column_divider"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="列分行颜色"/>
-
-    <Button
-        android:id="@+id/button_column_refresh"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="刷新+点击事件"/>
-
-    <Button
-        android:id="@+id/button_perfect"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="优化"/>
+        android:text="新版本入口"/>
 
 </LinearLayout>
