去掉不要的實例代碼

--- a/example/src/main/res/layout/activity_refresh_main.xml
+++ b/example/src/main/res/layout/activity_refresh_main.xml
@@ -9,7 +9,7 @@
         android:id="@+id/button_perfect_normal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="不固定标题+不滑动"/>
+        android:text="不固定标题+不能左右滑动"/>
 
     <Button
         android:id="@+id/button_perfect_title"
