--- a/example/src/main/res/values/dimens.xml
+++ b/example/src/main/res/values/dimens.xml
@@ -4,4 +4,9 @@
     <dimen name="item_fixed_column_width">90dp</dimen>
     <dimen name="item_slide_column_width">70dp</dimen>
     <dimen name="item_slide_column_refresh_width">100dp</dimen>
+
+    <dimen name="board_item_title_height">42dp</dimen>
+    <dimen name="board_item_normal_height">80dp</dimen>
+    <dimen name="board_item_fixed_column_width">130dp</dimen>
+    <dimen name="board_item_slide_column_width">100dp</dimen>
 </resources>
