类似抽屉菜单的实现

--- a/example/src/main/res/layout/activity_refresh_main.xml
+++ b/example/src/main/res/layout/activity_refresh_main.xml
@@ -29,4 +29,10 @@
         android:layout_height="wrap_content"
         android:text="区分title(adapter type)" />
 
+    <Button
+        android:id="@+id/button_perfect_stick"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="stick nav" />
+
 </LinearLayout>
